# k-means-clustering-mpi

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cu
input/: test_input.txt
src/: base_timer.cuh  consts.cuh  cpu_timer.cu  cpu_timer.cuh  file_io.cu  file_io.cuh  gpu_timer.cu  gpu_timer.cuh  k_means_clustering_cpu.cuh  k_means_clustering_gpu_sm.cu  k_means_clustering_gpu_sm.cuh  k_means_clustering_gpu_thrust.cuh  k_means_data.cu  k_means_data.cuh  k_means_data_cpu.cuh  main.cu  utils.cu  utils.cuh
